# lili-knowledge-practices

./: README.md  VALIDATION_REPORT.md
ai/agent-workflow/: README.md
ai/agent工作流/: README.md  app.py
ai/anomaly-detector/: README.md
ai/code-review-bot/: README.md
ai/customer-service/: README.md
ai/doc-summarizer/: README.md
ai/image-classifier/: README.md
ai/rag-system/: README.md  app.py  requirements.txt
ai/recommendation-engine/: README.md
ai/video-analyzer/: README.md
ai/voice-assistant/: README.md
ai/代码审查bot/: README.md  app.py
ai/图像识别/: README.md  app.py
ai/异常检测/: README.md  app.py
ai/推荐系统/: README.md  app.py
ai/文档摘要/: README.md  app.py
ai/智能客服bot/: README.md  app.py  requirements.txt
ai/视频理解/: README.md  app.py
ai/语音助手/: README.md  app.py
go/config-center/: README.md  config.yaml  go.mod  main.go
go/cron-scheduler/: README.md  go.mod  main.go
go/distributed-tracing/: README.md  go.mod  main.go
go/docker-deploy/: Dockerfile  README.md  docker-compose.yml  go.mod  main.go
go/file-sync/: README.md  go.mod  main.go
go/micro-gateway/: README.md  go.mod  main.go
go/object-storage/: README.md  go.mod  main.go
go/renamer/: README.md  main.go
go/restful-api/: README.md  go.mod  main.go
go/websocket-chat/: README.md  go.mod  index.html  main.go
nodejs/GraphQL服务/: README.md  package.json
nodejs/RateLimiter/: README.md  package-lock.json  package.json
nodejs/fullstack-blog/: README.md
nodejs/graphql-server/: README.md
nodejs/payment-service/: README.md
nodejs/rate-limiter/: README.md
nodejs/realtime-collab/: README.md
nodejs/task-queue/: README.md
nodejs/任务队列/: README.md  package-lock.json  package.json
nodejs/全栈博客系统/: README.md  package-lock.json  package.json
nodejs/实时协作/: README.md  package.json
nodejs/支付集成/: README.md  package-lock.json  package.json
nodejs/文件服务/: README.md  package-lock.json  package.json
nodejs/爬虫/: package.json
python/api-test-framework/: README.md  benchmark.py  conftest.py  requirements.txt  test_users.py
python/async-spider/: README.md  requirements.txt  spider.py
python/backtrader-strategy/: README.md  requirements.txt  strategy.py
python/etl-pipeline/: README.md  pipeline.py  requirements.txt
python/flask-rest-api/: README.md  app.py  requirements.txt
python/markdown-editor/: README.md  editor.py  requirements.txt
python/news-crawler/: README.md  crawler.py  requirements.txt
python/order-microservice/: README.md  main.py  (+1 more)
rust/db-client/: Cargo.toml
rust/db-client/src/: main.rs
rust/fullstack-app/: Cargo.toml
rust/fullstack-app/src/: main.rs
rust/hot-reload/: Cargo.toml
rust/hot-reload/src/: main.rs
rust/log-system/: Cargo.toml
rust/log-system/src/: main.rs
rust/net-proxy/: Cargo.toml
rust/net-proxy/src/: main.rs
rust/serde-lab/: Cargo.toml
rust/serde-lab/src/: main.rs
rust/web-api/: Cargo.toml  README.md
rust/web-api/src/: main.rs
(+124 files in other folders)
