[package]
name = "db-client"
version = "0.1.0"
edition = "2024"
description = "Rust 数据库实战 — SQLite CRUD操作与连接池"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
