[package]
name = "hot-reload"
version = "0.1.0"
edition = "2024"
description = "Rust 热加载实战 — 文件监控与配置热重载"

[dependencies]
notify = { version = "7", features = ["macos_kqueue"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
