[package]
name = "log-system"
version = "0.1.0"
edition = "2024"
description = "Rust 日志实战 — tracing日志系统，支持JSON/文本输出、分级过滤"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
