[package]
name = "net-proxy"
version = "0.1.0"
edition = "2024"
description = "Rust 网络代理实战 — HTTP/HTTPS正向代理与请求转发"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
