[package]
name = "serde-lab"
version = "0.1.0"
edition = "2024"
description = "Rust 序列化实战 — JSON/TOML/YAML/MessagePack 多格式序列化对比"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"
rmp-serde = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
