[package]
name = "web-api"
version = "0.1.0"
edition = "2024"
description = "Rust Web API实战 — 基于Actix-web的RESTful API服务"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
